<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="12dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/pay"
            android:gravity="center"
            android:text="@string/second"
            android:textAllCaps="true"
            android:textColor="@color/words"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:src="@drawable/liquid" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:text="Toppings"
                android:textColor="@color/mix"
                android:textSize="25dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:id="@+id/whippedCream"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:text="@string/cream"
                        android:textSize="14sp" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:id="@+id/chocolate"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:text="@string/Chocolate"
                        android:textSize="14dp" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/vanilla"
                        android:paddingLeft="8dp"
                        android:text="@string/vanilla"
                        android:textSize="14dp" />


                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:layout_marginLeft="42dp"
                    android:layout_marginStart="42dp"
                    android:text="@string/third"
                    android:textAllCaps="true"
                    android:textColor="@color/mix"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button2"
                            android:layout_width="48dp"
                            android:layout_height="28dp"
                            android:background="@drawable/bg"
                            android:onClick="increment"
                            android:text="@string/eighth"
                            android:textColor="@color/words"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/quantity_text_view"
                            android:layout_width="48dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/sixth"
                            android:textColor="@color/mix"
                            android:textSize="24sp" />

                        <Button
                            android:id="@+id/button3"
                            android:layout_width="48dp"
                            android:layout_height="28dp"
                            android:background="@drawable/bg"
                            android:onClick="decrement"
                            android:text="@string/ninth"
                            android:textColor="@color/words"
                            android:textSize="24sp" />

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:layout_marginLeft="42dp"
                    android:layout_marginStart="42dp"
                    android:text="@string/fourth"
                    android:textAllCaps="true"
                    android:textColor="@color/mix"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/price_text_view"
                    android:layout_width="87dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="42dp"
                    android:layout_marginStart="42dp"
                    android:text="@string/seventh"
                    android:textColor="@color/mix"
                    android:textSize="24sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg"
        android:onClick="submitOrder"
        android:text="@string/fifth"
        android:textColor="@color/words"
        android:textSize="24dp" />

</RelativeLayout>